@@ -2,6 +2,7 @@ version 11.0.1
 date: dd/mm/2022
   * introduced the new access level "EXT" for universal project accessibility
   * fixed several bugs related to the MDR
+  * fixed a bug when showing Manchester Expressions in a project having a reasoner configured
   * updated dependency on MAPLE 0.0.12
   * updated dependency on CODA 1.7.6
   * updated dependency on Sheet2RDF 5.0.2
